objects/Plan_Feature_Add_On__c.object
<CustomObject>
    <fields>
        <fullName>Add_On_Type__c</fullName>
        <label>Add On Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Subtractive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>Feature__c</referenceTo>
        <relationshipLabel>Plan Feature Add Ons</relationshipLabel>
        <relationshipName>Plan_Feature_Add_Ons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Plan Feature Add Ons</relationshipLabel>
        <relationshipName>Plan_Feature_Add_Ons</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan Feature Add On</label>
    <nameField>
        <label>Plan Feature Add On Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Feature Add Ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>